--- a/style.css
+++ b/style.css
@@ -1,26 +1,67 @@
+:root{
+--vermelho: #e50914;
+--preto: #000;
+--branco:#fff;
+--cinza:#666;
+
+}
+
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
-.topBar{ 
-    background-color: royalblue;
-    display: flexbox;
-    justify-items: start;
-    justify-content: flex-start
+body{
+    background: var(--preto);
+    color: var(--branco);
+}
+
+header .box{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:space-around; !important
+
+}
+
+.box img {
+    width:40vh;
+    margin: 5vh;
+
+}
+
+header nav a{
+    text-decoration: none;
+    color:var(--cinza);
+    margin-right: 5vh;
+}
+
+header nav a:hover{
+    font-weight: 500;
+    color: var(--branco);
+}
+
+/*Filme Principal*/
+
+.box-principal{
+    font-size: 18px;
+    height: 400px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url(img/animacoes/arkane/capa.png);
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     
 }
 
-.logo {
-    width:40vh;
-    margin: 5vh;
+.box-principal .descricao{
+    margin-bottom: 70px;
 }
 
-.categoria{ 
-    color: black;
-    text-decoration: none;
+.titulo{
+    font-size: 40px;
 }
 
-.categoria:hover{
-    color:#ffff;
-}
